@@ -1,5 +1,9 @@
 2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Device.cc (Read_Disk_Layout): some internal codechanges. Looks a bit cleaner now.
+
+2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
+
 	* include/Device.h,
 	  src/Device.cc: made 'deep-scan' optional in Read_Disk_Layout. Removed obsolete (already) commented function.
 	* include/Partition.h,
